<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:id="@+id/fragment_item_special"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
    <LinearLayout
        android:id="@+id/item1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="6"
            android:paddingLeft="10dp"
            android:scaleType="fitStart"
            android:src="@drawable/ic_ecoupon"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="normal"
            android:gravity="center_vertical|left"
            android:text="@string/btn_ScanCoupon"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/item2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="6"
            android:paddingLeft="10dp"
            android:scaleType="fitStart"
            android:src="@drawable/icon_home_upload_image"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="normal"
            android:gravity="center_vertical|left"
            android:text="@string/btn_uploadImage"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/item3"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="6"
            android:paddingLeft="10dp"
            android:scaleType="fitStart"
            android:src="@drawable/icon_home_checkin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="normal"
            android:gravity="center_vertical|left"
            android:text="@string/btn_Checkin"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/item4"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="6"
            android:paddingLeft="10dp"
            android:scaleType="fitStart"
            android:src="@drawable/icon_home_review"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="normal"
            android:gravity="center_vertical|left"
            android:text="@string/btn_Reviews"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/item5"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="6"
            android:paddingLeft="10dp"
            android:scaleType="fitStart"
            android:src="@drawable/icon_home_add_new_place"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="normal"
            android:gravity="center_vertical|left"
            android:text="@string/btn_AddPlace"/>

    </LinearLayout>

</LinearLayout>