<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="360dp"
    android:background="@color/colorChangeCity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
       >
        <ViewFlipper
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inAnimation="@android:anim/fade_in"
            android:outAnimation="@android:anim/fade_out"
            android:autoStart="true"
            android:flipInterval="2500"
            android:id="@+id/viewFlipper">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_viewFillper1"
                android:src="@drawable/img_flipper1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_viewFillper2"
                android:src="@drawable/img_flipper2"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_viewFillper3"
                android:src="@drawable/img_flipper3"/>

        </ViewFlipper>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/item_special"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10sp"
            android:layout_marginLeft="10sp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAllCaps="false"
                android:layout_marginLeft="70dp"
                android:gravity="right"
                android:padding="5sp"
                android:src="@drawable/logo_campaign_7up"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:textColor="@color/colorBlack"
                android:text="Thèm là Nhích Cùng 7UP"
                android:gravity="left|center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorGray"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginTop="7sp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/item_special"
                    android:layout_marginBottom="7sp"
                    android:layout_marginRight="7sp"
                    android:layout_marginLeft="10sp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:layout_gravity="center"
                        android:textAllCaps="false"
                        android:padding="5sp"
                        android:src="@drawable/ic_nearby"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/colorBlack"
                        android:text="@string/btn_Near"
                        android:gravity="center_vertical|left"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/item_special"
                    android:layout_marginBottom="7sp"
                    android:layout_marginRight="7sp"
                    android:layout_marginLeft="10sp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:layout_gravity="center"
                        android:textAllCaps="false"
                        android:padding="5sp"
                        android:src="@drawable/ic_sttnotification_tablenow"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/colorBlack"
                        android:text="@string/btn_Booking"
                        android:gravity="center_vertical|left"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/item_special"
                    android:layout_marginBottom="7sp"
                    android:layout_marginRight="7sp"
                    android:layout_marginLeft="10sp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:layout_gravity="center"
                        android:textAllCaps="false"
                        android:padding="5sp"
                        android:src="@drawable/ic_ecard"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/colorBlack"
                        android:text="@string/btn_Card"
                        android:gravity="center_vertical|left"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/item_special"
                    android:layout_marginBottom="7sp"
                    android:layout_marginRight="7sp"
                    android:layout_marginLeft="10sp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:layout_gravity="center"
                        android:textAllCaps="false"
                        android:padding="5sp"
                        android:src="@drawable/ic_icon_binhluanmoi"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/colorBlack"
                        android:text="@string/btn_Cmt"
                        android:gravity="center_vertical|left"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/item_special"
                    android:layout_marginBottom="7sp"
                    android:layout_marginRight="7sp"
                    android:layout_marginLeft="10sp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:layout_gravity="center"
                        android:textAllCaps="false"
                        android:padding="5sp"
                        android:src="@drawable/ic_icon_topthanhvien"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/colorBlack"
                        android:text="@string/btn_Top"
                        android:gravity="center_vertical|left"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorGray"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginTop="7sp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/item_special"
                    android:layout_marginBottom="7sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="7sp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:layout_gravity="center"
                        android:textAllCaps="false"
                        android:padding="5sp"
                        android:src="@drawable/ic_ecoupon"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/colorBlack"
                        android:text="@string/btn_Coupon"
                        android:gravity="center_vertical|left"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/item_special"
                    android:layout_marginBottom="7sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="7sp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:layout_gravity="center"
                        android:textAllCaps="false"
                        android:padding="5sp"
                        android:src="@drawable/ic_sttnotification_deli"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/colorBlack"
                        android:text="@string/btn_Ship"
                        android:gravity="center_vertical|left"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/item_special"
                    android:layout_marginBottom="7sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="7sp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:layout_gravity="center"
                        android:textAllCaps="false"
                        android:padding="5sp"
                        android:src="@drawable/ic_game"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/colorBlack"
                        android:text="@string/btn_Game"
                        android:gravity="center_vertical|left"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/item_special"
                    android:layout_marginBottom="7sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="7sp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:layout_gravity="center"
                        android:textAllCaps="false"
                        android:padding="5sp"
                        android:src="@drawable/ic_icon_chuyende"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/colorBlack"
                        android:text="@string/btn_Blog"
                        android:gravity="center_vertical|left"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/item_special"
                    android:layout_marginBottom="7sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="7sp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:layout_gravity="center"
                        android:textAllCaps="false"
                        android:padding="5sp"
                        android:src="@drawable/ic_video"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/colorBlack"
                        android:text="@string/btn_Video"
                        android:gravity="center_vertical|left"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>